Fix top menu nav highlight overlapping with divider line

--- a/sitemedia/scss/base/_navigation.scss
+++ b/sitemedia/scss/base/_navigation.scss
@@ -27,7 +27,7 @@ header.nav {
      a {
         color: #000000;
         text-decoration: none;
-        padding-bottom: 14px;
+        padding-bottom: 13px;
         &:focus,
         &:hover,
         &:visited {
